# fixed_point_number

./: CMakeLists.txt  README.md  fixed_point.hpp  main.cpp
